[gd_scene load_steps=4 format=3 uid="uid://buk8x5otyx6ls"]

[ext_resource type="Script" path="res://src/pause/pause_menu.gd" id="1_0ghtt"]
[ext_resource type="FontFile" uid="uid://b25i7qnxbb0uo" path="res://assets/fonts/colvetica.otf" id="2_f3sor"]

[sub_resource type="Theme" id="Theme_65fxr"]
default_font = ExtResource("2_f3sor")
default_font_size = 22

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ghtt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 0.839216)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -50.5
offset_right = 92.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_65fxr")

[node name="Resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -50.5
offset_right = 92.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_65fxr")

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer2"]
layout_mode = 2
text = "Fullscreen"
alignment = 1

[node name="Back" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="VBoxContainer2/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="pressed" from="VBoxContainer2/Back" to="." method="_on_back_pressed"]
